--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^0.5.3
   html: ^0.14.0
   http: ^0.12.0
+  html_unescape: ^1.0.1
 
 dev_dependencies:
   flutter_test:
