--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,20 +10,19 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite:
-  equatable: ^0.2.0
-  flutter_bloc: ^0.21.0
-  jaguar_orm: ^2.2.6
-  jaguar_query_sqflite: ^2.2.6
-  cupertino_icons: ^0.1.2
+  equatable: ^2.0.0
+  flutter_bloc: ^6.1.3
+  sqfentity: ^1.4.0+3
+  sqfentity_gen: ^1.4.0+2
+  cupertino_icons: ^1.0.2
   shared_preferences: ^0.5.3
-  html: ^0.14.0
-  http: ^0.12.0
+  html: ^0.15.0
+  http: ^0.12.2
   html_unescape: ^1.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  jaguar_orm_gen:
   build_runner:
   path_provider:
 
