--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,21 +10,22 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite:
+  objectbox: ^0.13.0-nullsafety.1
+  objectbox_flutter_libs: any
   equatable: ^2.0.0
   flutter_bloc: ^6.1.3
-  sqfentity: ^1.4.0+3
-  sqfentity_gen: ^1.4.0+2
   cupertino_icons: ^1.0.2
   shared_preferences: ^0.5.3
   html: ^0.15.0
   http: ^0.12.2
   html_unescape: ^1.0.1
+  path_provider:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
-  path_provider:
+  objectbox_generator: ^0.13.0-nullsafety.1
 
 
 # For information on the generic Dart part of this file, see the
