--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,35 +1,44 @@
 name: laws_browser
 description: A new Flutter project.
 
+# The following line prevents the package from being accidentally published to
+# pub.dev using `pub publish`. This is preferred for private packages.
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
+# The following defines the version and build number for your application.
+# A version number is three numbers separated by dots, like 1.2.43
+# followed by an optional build number separated by a +.
+# Both the version and the builder number may be overridden in flutter
+# build by specifying --build-name and --build-number, respectively.
+# In Android, build-name is used as versionName while build-number used as versionCode.
+# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
+# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
+# Read more about iOS versioning at
+# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  sqflite:
-  moor: ^4.0.0-nullsafety
-  sqlite3_flutter_libs:
-  objectbox: ^0.13.0-nullsafety.1
-  objectbox_flutter_libs: any
-  equatable: ^2.0.0
-  flutter_bloc: ^6.1.3
+  hive:
+  hive_flutter:
+  equatable:
+  flutter_bloc:
   cupertino_icons: ^1.0.2
-  shared_preferences: ^0.5.3
-  html: ^0.15.0
-  http: ^0.12.2
-  html_unescape: ^1.0.1
-  path_provider:
+  shared_preferences:
+  html:
+  http:
+  html_unescape:
+  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
-  objectbox_generator: ^0.13.0-nullsafety.1
-  moor_generator:
-
+  hive_generator:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -44,8 +53,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
